Frontend Mentor QR-Code-Component

--- a/root/css/index.css
+++ b/root/css/index.css
@@ -1,3 +1,3 @@
-@import "./_attribution.css";
-@import "./_qr-code.css";
-@import "./_reset.css";
+@import "_attribution.css";
+@import "_qr-code.css";
+@import "_reset.css";
