--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+}
+
 html {
   font-size: 15px;
 }
@@ -5,6 +10,8 @@ html {
 body {
   background: hsl(212, 45%, 89%);
   font-family: Outfit;
+  display: flex;
+  flex-direction: column;
 }
 
 *,
