--- a/src/css/layout/nav.css
+++ b/src/css/layout/nav.css
@@ -2,7 +2,7 @@ nav {
   flex: 0 1 auto;
 }
 
-nav menu {
+nav ul {
   display: flex;
 
   margin: 0;
@@ -11,23 +11,23 @@ nav menu {
   list-style: none;
 }
 
-menu li:not(:last-of-type) {
+ul li:not(:last-of-type) {
   margin-right: 1rem;
 }
 
-menu li a:hover {
+ul li a:hover {
   background: #fff;
 
   box-shadow: 0px 1px 2px 0px rgba(31, 50, 81, 0.1),
     0px 1px 3px 1px rgba(31, 50, 81, 0.15);
 }
 
-menu li a:active {
+ul li a:active {
   box-shadow: 0px 1px 2px 0px rgba(31, 50, 81, 0.1),
     0px 2px 6px 2px rgba(31, 50, 81, 0.15);
 }
 
-menu li a {
+ul li a {
   display: block;
 
   padding: 0.5rem 1.5rem;
@@ -40,12 +40,12 @@ menu li a {
   text-decoration: none;
 }
 
-menu li a.active {
+ul li a.active {
   background: #2d7dfa;
 
   color: #fff;
 }
 
-menu li a.active:hover {
+ul li a.active:hover {
   background: #3685ff;
 }
