--- a/src/css/layout/main.css
+++ b/src/css/layout/main.css
@@ -2,6 +2,12 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 0 auto;
+}
 
-  flex: 1 1 auto;
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
