--- a/src/css/layout/nav.css
+++ b/src/css/layout/nav.css
@@ -11,23 +11,23 @@ nav ul {
   list-style: none;
 }
 
-ul li:not(:last-of-type) {
+nav ul li:not(:last-of-type) {
   margin-right: 1rem;
 }
 
-ul li a:hover {
+nav ul li a:hover {
   background: #fff;
 
   box-shadow: 0px 1px 2px 0px rgba(31, 50, 81, 0.1),
     0px 1px 3px 1px rgba(31, 50, 81, 0.15);
 }
 
-ul li a:active {
+nav ul li a:active {
   box-shadow: 0px 1px 2px 0px rgba(31, 50, 81, 0.1),
     0px 2px 6px 2px rgba(31, 50, 81, 0.15);
 }
 
-ul li a {
+nav ul li a {
   display: block;
 
   padding: 0.5rem 1.5rem;
@@ -40,12 +40,12 @@ ul li a {
   text-decoration: none;
 }
 
-ul li a.active {
+nav ul li a.active {
   background: #2d7dfa;
 
   color: #fff;
 }
 
-ul li a.active:hover {
+nav ul li a.active:hover {
   background: #3685ff;
 }
